<resources>
    <string name="app_name">Epilepsy Foundation</string>
    <string name="app_names" translatable="false">Epilepsy Foundation</string>
    <string name="first_name">First Name  <font color='#FF0000'>*</font></string>
    <string name="last_name">Last Name  <font color='#FF0000'>*</font></string>
    <string name="dob">Date of Birth  <font color='#FF0000'>*</font></string>
    <string name="gender">Gender  <font color='#FF0000'>*</font></string>
    <string name="mobile_no">Mobile Number  <font color='#FF0000'>*</font></string>
    <string name="first_names">First Name</string>
    <string name="last_names">Last Name</string>
    <string name="dobs">Date of Birth</string>
    <string name="genders">Gender</string>
    <string name="mobile_nos">Mobile Number</string>
    <string name="settings">Setting</string>
    <string name="email">Email (Optional)</string>
    <string name="already_member">If already a registered member</string>
    <string name="submit">Submit</string>
    <string name="language_english">English</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_marathi">Marathi</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="gender_select">Select Gender</string>
    <string name="is_required">is required</string>
    <string name="invalid_mobile_number">Please enter a valid mobile number</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="successful">successful</string>
    <string name="view_result">View Result</string>
    <string name="assessment_form">Assessment Form</string>
    <string name="Qoliftitle">QOLIE-10-P</string>
    <string name="Stigmatitle">Epilepsy Stigma Scale</string>
    <string name="whodastitle">WHODAS 2.0</string>
    <string name="Qolie_instruction">Instructions</string>
    <string name="Qolie_instruction_data">The QOLIE-10-P is a brief survey of health-related quality of life for adults with epilepsy. [Adolescents (ages 11-17 years) should complete the QOLIE-AD-48, designed for that age group.] There are 10 questions about health and daily activities, one question about how much distress you feel about problems and worries related to epilepsy, and a review of what bothers you most. This questionnaire should be completed only by the person who has epilepsy (not a relative or friend) because no one else knows how YOU feel.\nThese questions are about how you have been FEELING and the types of problems you have been having during the past 4 weeks</string>
    <string name="start_assessment">Start</string>
    <string name="stigma_intro"> The Parent Stigma Scale was developed by Austin with a 10 items scale that can access the degree to which a person belives that epilepsy is perceived as negative and interferes with relationships with others. Each item is rated on 7-point scale from 1. Stongly disagree to 7. strongly agree.</string>
    <string name="Stigma_title_statment">Please tell me how much you agree or disagree with each of the following 10 statements.</string>
    <string name="stigma_optn1">STRONGLY DISAGREE</string>
    <string name="stigma_optn2">MODERATELY DISAGREE</string>
    <string name="stigma_optn3">SLIGHTLY DISAGREE</string>
    <string name="stigma_optn4">NEITHER DISAGREE NOR AGREE</string>
    <string name="stigma_optn5">SLIGHTLY AGREE</string>
    <string name="stigma_optn6">MODERATELY AGREE</string>
    <string name="stigma_optn7">STRONGLY AGREE</string>
    <string name="whodas" translatable="false">WORLD HEALTH ORGANIZATION DISABILITY ASSESSMENT SCHEDULE 2.0</string>
    <string name="whodas_version" translatable="false">12-item version, self-administered</string>
    <string name="whodas_instruction" translatable="false">This questionnaire ask about difficulties due to health conditions. Think back over the past 30 days and answer these questions,
        thinking about how much difficulty you had doing the following activities.</string>
    <string name="lbl_understanding_epi">Understanding Epilepsy</string>
    <string name="lbl_epi_medication">Epilepsy Medication</string>
    <string name="lbl_emergency_mgmt">Emergency Management</string>
    <string name="lbl_title">Information</string>
    <string name="title_awareness_video">Awareness Video</string>
    <string name="lbl_confirm_epilepsy">This is a phone based screening tool
        to enable non-doctors to diagnose a
        person as epileptic or not. Please
        enter the demographic details, and
        answer the following questions to be
        able to reach a diagnosis. \n\n
        Reference : For Age group 2-9 years Neurodevelopmental Disabilities Among Children in India:
        An INCLEN Study (October 2011) \n\n</string>
    <string name="button_go">Check</string>
    <string name="lbl_view_result">View Result</string>
    <string name="lbl_medication_start_date">Start Date</string>
    <string name="lbl_medication_start_time">Start Time</string>
    <string name="lbl_medication_name">Medication Name</string>
    <string name="lbl_title_duration">Duration</string>
    <string name="lbl_dose">Dose</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="lbl_event_date">Visit Date</string>
    <string name="lbl_event_time">Visit Time</string>
    <string name="select_unit">Select Unit</string>
    <string name="select_frequency">Select Frequency</string>
    <string name="button_pre">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_submit">Submit</string>
    <string name="h1" translatable="false">H1)  Overall , in the past 30 days, how many days were these difficulties present ?</string>
    <string name="h2" translatable="false">H2)  In the past 30 days, for how many days were you totally unable to carry out your unsual activities or work because of any health condition ? </string>
    <string name="h3" translatable="false">H3)  In the past 30 days, not counting the days that you were totally unable, for how many days did you cut back or reduce your usual activities or work because of any health condition ? </string>
    <string name="h1_optn" translatable="false">Record number of days....</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc"><b>"Epilepsy Foundation India"</b> is a non-profitable charitable organization dedicated
towards the welfare of the millions of people suffering with epilepsy in India
and their families.\n\n
				The Epilepsy Foundation app allows patients to store their epilepsy related medical history
that can be quickly accessed during times of medical emergencies. The app works in online as well as in offline mode.</string>
    <string name="copy_right_desc">COPYRIGHT &#169; 2025 EPILEPSY FOUNDATION OF INDIA</string>
</resources>