<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bg"
    tools:context=".activity.assessment.AssessmentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />


    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Qolie_instruction" />

    <TextView
        android:id="@+id/instuction_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:text="@string/Qolie_instruction_data" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/start_assessment" />

</LinearLayout>
